--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,8 @@ html {
   min-height: 100vh;
   display: flex;
   align-items: center;
-  background-image: url("https://images.unsplash.com/photo-1555507036-ab1f4038808a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1452&q=80");
+  /* background-image: url("https://images.unsplash.com/photo-1555507036-ab1f4038808a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1452&q=80"); */
+  background-image: url("../img/bg-roti6.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -229,10 +230,21 @@ html {
   display: inline-block;
   padding: 1rem 3rem;
   font-size: 1.4rem;
+  /* width: 190px; */
   color: #fff;
   background-color: var(--primary);
   border-radius: 0.5rem;
   box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+}
+.hero .content .cta {
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  width: 190px;
+}
+
+.cta i {
+  padding-left: 1rem;
 }
 
 /* br img */
