--- a/css/style.css
+++ b/css/style.css
@@ -189,9 +189,11 @@ html {
   background-size: cover;
   background-position: center;
   position: relative;
+  -webkit-mask-image: linear-gradient(rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0));
+  mask-image: linear-gradient(rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0));
 }
 
-.hero::after {
+/* .hero::after {
   content: "";
   display: block;
   position: absolute;
@@ -199,11 +201,14 @@ html {
   height: 30%;
   bottom: 0;
   background: linear-gradient(0deg, rgba(1, 1, 3, 1) 8%, rgba(255, 255, 255, 0) 50%);
-}
+} */
 
 .hero .content {
   padding: 1.4rem 7%;
   max-width: 60rem;
+  /* width: 100%; */
+  /* text-align: center; */
+  position: fixed;
 }
 
 .hero .content h1 {
