--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ html {
 .navbar .navbar-nav a {
   color: #fff;
   display: inline-block;
-  font: 1.3rem;
+  font-size: 1.4rem;
   margin: 0 1rem;
 }
 
@@ -354,7 +354,7 @@ html {
 }
 .menu .row .menu-card img {
   border-radius: 50%;
-  width: 50%;
+  width: 60%;
 }
 
 .menu .row .menu-card .menu-card-title {
@@ -589,9 +589,89 @@ footer .credit a {
     font-size: 75%;
   }
 }
+/* Tablet air 820px */
+@media (max-width: 820px) {
+  html {
+    font-size: 64.5%;
+  }
+  #hamburger-menu {
+    display: inline-block;
+  }
+  .navbar .navbar-nav {
+    position: absolute;
+    top: 100%;
+    right: -100%;
+    background-color: #fff;
+    width: 30rem;
+    height: 100vh;
+    transition: 0.3s;
+  }
+  .navbar .navbar-nav.active {
+    right: 0;
+  }
 
+  .navbar .navbar-nav a {
+    color: var(--bg);
+    display: block;
+    margin: 1.5rem;
+    padding: 0.5rem;
+    font-size: 2rem;
+  }
+
+  .navbar .navbar-nav a::after {
+    transform-origin: 0 0;
+  }
+  .navbar .navbar-nav a:hover::after {
+    transform: scaleX(0.2);
+  }
+
+  .navbar .search-form {
+    width: 90%;
+    right: 2rem;
+  }
+
+  .about .row {
+    flex-wrap: wrap;
+  }
+
+  .about .row .about-img img {
+    height: 24rem;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .about .row .content {
+    padding: 0;
+  }
+
+  .about .row .content h3 {
+    margin-top: 1rem;
+    font-size: 2rem;
+  }
+
+  .about .row .content p {
+    font-size: 1.6rem;
+  }
+  .menu p {
+    font-size: 1.2rem;
+  }
+
+  .contact .row {
+    flex-wrap: wrap;
+  }
+  .contact .row .map {
+    height: 30rem;
+  }
+
+  .contact .row form {
+    padding-top: 0;
+  }
+  .modal-content {
+    flex-wrap: wrap;
+  }
+}
 /* Tablet */
-@media (max-width: 758px) {
+@media (max-width: 768px) {
   html {
     font-size: 62.5%;
   }
